--- a/.github/workflows/main1_supreethw23.yml
+++ b/.github/workflows/main1_supreethw23.yml
@@ -29,9 +29,9 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-        run: dotnet tool install -g dotnet-ef --version 7.0.14
+  dotnet tool install -g dotnet-ef --version 7.0.14
 
-        run: dotnet ef migrations bundle --runtime linux-x64 -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
+  dotnet ef migrations bundle --runtime linux-x64 -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
