--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  
   "ConnectionStrings": {
-    "AZURE_SQL_CONNECTIONSTRING": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-ca7b86aa-ade2-4db1-a4a9-4dce925cb814;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AzureSqlDatabase": "Server=tcp:<your_server>.database.windows.net,1433;Initial Catalog=<your_database>;Persist Security Info=False;User ID=<your_username>;Password=<your_password>;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
   }
 }
