--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   
   "ConnectionStrings": {
-    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:<your_server>.database.windows.net,1433;Initial Catalog=<your_database>;Persist Security Info=False;User ID=<your_username>;Password=<your_password>;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:supreethw23-server.database.windows.net,1433;Initial Catalog=supreethw23-database;Persist Security Info=False;User ID=supreethw23-server-admin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
   }
 }
